[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proiettore"
version = "0.1.0"
description = "Simple image projector / slideshow"
authors = [ { name = "utente" } ]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["Pillow>=9.0.0"]
